<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/textViewSelectRole"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_your_role"
        android:textSize="24sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"/>

    <Button
        android:id="@+id/buttonAdmin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/admin"
        android:layout_below="@+id/textViewSelectRole"
        android:layout_marginTop="40dp"/>

    <Button
        android:id="@+id/buttonClient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/client"
        android:layout_below="@+id/buttonAdmin"
        android:layout_marginTop="20dp"/>
    >
</RelativeLayout>
