<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:textSize="18sp"
            android:layout_marginTop="16dp"
            android:inputType="textPersonName"/>

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textSize="18sp"
            android:layout_marginTop="16dp"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:textSize="18sp"
            android:layout_marginTop="16dp"
            android:inputType="phone"/>

        <EditText
            android:id="@+id/editTextDepartment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/department"
            android:textSize="18sp"
            android:layout_marginTop="16dp"
            android:inputType="text"/>

        <Button
            android:id="@+id/saveProfileButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Save"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"/>


        <!-- Add this inside your existing ConstraintLayout or LinearLayout in activity_admin_main.xml -->




    </LinearLayout>
</ScrollView>
